[package]
name = "fast-decompress-wasm"
version = "0.0.1"
authors = ["farine"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.85"
lzma-rs = { version = "0.3.0"}
tar = "0.4.38"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.35"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"